ella-parser/src/snapshots/ella_parser__parser__tests__binary-associativity.snap
---
source: ella-parser/src/parser.rs
expression: "expr(\"2 * 2 * 2\")"
---
Binary {
    lhs: Binary {
        lhs: NumberLit(
            2.0,
        ),
        op: Asterisk,
        rhs: NumberLit(
            2.0,
        ),
    },
    op: Asterisk,
    rhs: NumberLit(
        2.0,
    ),
}
