ella-parser/src/snapshots/ella_parser__parser__tests__binary-equality.snap
---
source: ella-parser/src/parser.rs
expression: "expr(\"1 == 2 - 1\")"
---
Binary {
    lhs: NumberLit(
        1.0,
    ),
    op: EqualsEquals,
    rhs: Binary {
        lhs: NumberLit(
            2.0,
        ),
        op: Minus,
        rhs: NumberLit(
            1.0,
        ),
    },
}
