ella-parser/src/snapshots/ella_parser__parser__tests__fn-call-with-nested-args.snap
---
source: ella-parser/src/parser.rs
expression: "expr(\"foo(1, bar, baz())\")"
---
FnCall {
    ident: "foo",
    args: [
        NumberLit(
            1.0,
        ),
        Identifier(
            "bar",
        ),
        FnCall {
            ident: "baz",
            args: [],
        },
    ],
}
