ella-parser/src/snapshots/ella_parser__parser__tests__fn-call.snap
---
source: ella-parser/src/parser.rs
expression: "expr(\"foo()\")"
---
FnCall {
    ident: "foo",
    args: [],
}
